// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queries: commentsQuery: query to match snapshot 1`] = `
"{
      node(id:\\"nodeId\\") {
          ... on PullRequest {
            id
            
    comments(first: 100  after:\\"cursor\\" ) {
      edges {
        node {
          author {
            login
          }
          body
        }
      }
      pageInfo { endCursor hasNextPage hasPreviousPage startCursor }
    }

          }
        }
    }"
`;

exports[`queries: issuesQuery: query to match snapshot 1`] = `
"{
        repository(name: \\"repo\\" owner: \\"org\\") {
          
issues(
   after:\\"cursor\\" 
  first: 100
  orderBy: { field:CREATED_AT direction:DESC }
) {
  edges {
    node {
      title
      createdAt
      closedAt
      state
      labels(first:5) {
        edges {
          node {
            name
          }
        }
      }
    }
  }
  pageInfo { endCursor hasNextPage hasPreviousPage startCursor }
}
        }
    }"
`;

exports[`queries: prQuery: query to match snapshot 1`] = `
"{
          repository(name: \\"repo\\" owner: \\"org\\") {
            
pullRequests(
  first: 100
   after:\\"cursor\\" 
  states: [MERGED]
  orderBy: {field: CREATED_AT direction: DESC}
) {
  edges {
    node {
      id
      url
      author {
        login
      }
      repository {
        name
        owner {
          login
        }
      }
      additions
      deletions
      changedFiles
      mergedAt
      createdAt
      
    reviews(first: 10 ) {
      edges {
        node {
          id
          state
          author {
            login
          }
          
    comments(first: 10 ) {
      edges {
        node {
          author {
            login
          }
          body
        }
      }
      pageInfo { endCursor hasNextPage hasPreviousPage startCursor }
    }

        }
      }
      pageInfo { endCursor hasNextPage hasPreviousPage startCursor }
    }

      
    comments(first: 10 ) {
      edges {
        node {
          author {
            login
          }
          body
        }
      }
      pageInfo { endCursor hasNextPage hasPreviousPage startCursor }
    }

    }
  }
  pageInfo { endCursor hasNextPage hasPreviousPage startCursor }
}
          }
      }"
`;

exports[`queries: releasesQuery: query to match snapshot 1`] = `
"{
        repository(name: \\"repo\\" owner: \\"org\\") {
          
releases(
   after:\\"cursor\\" 
  first:100
  orderBy:{ field:CREATED_AT direction:DESC }
) {
  edges {
    node {
      id
      name
      createdAt
      tag {
        name
      }
    }
  }
  pageInfo { endCursor hasNextPage hasPreviousPage startCursor }
}
        }
    }"
`;

exports[`queries: reviewCommentsQuery: query to match snapshot 1`] = `
"{
      node(id:\\"nodeId\\") {
          ... on PullRequestReview {
            id
            
    comments(first: 100  after:\\"cursor\\" ) {
      edges {
        node {
          author {
            login
          }
          body
        }
      }
      pageInfo { endCursor hasNextPage hasPreviousPage startCursor }
    }

          }
        }
    }"
`;

exports[`queries: reviewsQuery: query to match snapshot 1`] = `
"{
      node(id:\\"nodeId\\") {
          ... on PullRequest {
            id
            
    reviews(first: 100  after:\\"cursor\\" ) {
      edges {
        node {
          id
          state
          author {
            login
          }
          
    comments(first: 10 ) {
      edges {
        node {
          author {
            login
          }
          body
        }
      }
      pageInfo { endCursor hasNextPage hasPreviousPage startCursor }
    }

        }
      }
      pageInfo { endCursor hasNextPage hasPreviousPage startCursor }
    }

          }
        }
    }"
`;
